chart component fixes done related to font size and blurring effect etc

--- a/src/components/chats/chatInput/chatInput.module.scss
+++ b/src/components/chats/chatInput/chatInput.module.scss
@@ -1,6 +1,6 @@
 .chat_input_main_div {
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
     left: 0;
     right: 0;
     width: 90%;
