--- a/src/components/chats/messageBubble/messageBubble.module.scss
+++ b/src/components/chats/messageBubble/messageBubble.module.scss
@@ -17,11 +17,12 @@
     padding: 8px 16px;
     gap: 10px;
     background: linear-gradient(122.44deg, #1C7C7E 28.53%, #064345 97.85%);
+    margin: 4px 0;
 }
 
 .user_message_content_div>p {
     font-weight: 400;
-    font-size: 14px;
+   font-size: 15px;
     line-height: 20px;
     letter-spacing: 0%;
     text-align: left;
@@ -57,7 +58,7 @@
     width: 100%;
     height: auto;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 15px;
     margin-top: 5px;
     line-height: 24px;
     letter-spacing: 0%;
@@ -76,16 +77,16 @@
 
 .merchant_message_bubble>p {
     font-weight: 400;
-    font-size: 17.5px;
+    font-size: 15px;
     margin-top: 5px;
     line-height: 18px;
     letter-spacing: 0;
     color: #000000;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .merchant_list_container {
-    width: 90%;
+    width: 80%;
     height: auto;
     gap: 8px;
     border-radius: 20px;
@@ -99,11 +100,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    width: 100%;
+    width: 94%;
     height: auto;
     display: flex;
-    margin: 10px 0;
+    margin: 10px auto;
 }
 
 .merchant_list_inner_divs > span{
@@ -124,6 +124,6 @@ color: #000000;
 }
 
 .table_main_div > p{
-    font-size: 17.5px;
-    margin-bottom: 12px;
+    font-size: 15px;
+    margin-bottom: 16px;
 }
